General changes to export/import ug

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -353,7 +353,7 @@ You can stop the test any time simply by typing `end`.
 You can use this command to export all your FlashCards in a particular category, to an external file.
 This may be useful if you wish to publish your FlashCards somewhere, print them out, or share them with a friend.
 The file will be located at the file path that you specify, and the format of the file will be inferred from the
-extension. We currently support exporting to JSON (`.json`) and document (`.docx`) file formats. +
+extension. We currently support exporting to JSON ('.json') and document ('.docx') file formats. +
 Example: `export c>CS2105 p>C:\Documents\cs2105.json`
 
 Suppose you have a category named `CS2105`, and you wanted to export the FlashCards in that category to an external file
@@ -375,7 +375,7 @@ Please refer to the table below for a summary of the file formats that we suppor
 
 |====
 |**Format**|Document|JSON
-|**Extension**|`.docx`|`.json`
+|**Extension**|'.docx'|'.json'
 |**Intended purpose**|For use as a cheat sheet|For sharing
 |**What is copied from each FlashCard**|Question and answer only|Question, answer, and the category which you specified in the export command
 |====
@@ -399,10 +399,10 @@ CAUTION: Please take care not to modify exported `.json` files - your friends mi
 === Import flashcards from a JSON file: `import p>FILE_PATH`
 
 You can use this command to import FlashCards from a file that you or someone else had exported to earlier.
-We currently only support importing from JSON (`.json`) files. +
+We currently only support importing from JSON ('.json') files. +
 Example: `import p>C:\Downloads\cs2105.json`
 
-Suppose your friend has kindly exported some of his FlashCards for you to use. You have download the `.json` file that he sent you,
+Suppose your friend has kindly exported some of his FlashCards for you to use. You have download the JSON file that he sent you,
 and it's currently located at the following path: `C:\Downloads\cs2105.json`.
 Your next step is to get those FlashCards into your copy of KFC. Here's how you'd go about this:
 
