--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -149,6 +149,7 @@ image::PriorityFlashCardTestSetSequenceDiagram.png[]
 // end::cards[]
 
 [[Design-Storage]]
+// tag::storage[]
 === Storage component
 
 .Structure of the Storage Component
@@ -195,6 +196,22 @@ Java code into the file
 and used to run the code in each card.
 
 To be implemented: An in-app Flashcard Pro compiler and debugger for JS and Java as a playground for the user
+
+=== Regex Component
+// tag::regexutil[]
+Having that we are using the regex approach to parsing, some common parsing and regex creation methods
+are stored in the following class:
+
+*API* : link:{repoURL}/src/main/java/dream/fcard/util/RegexUtil.java[`RegexUtil.java`]
+
+RegexUtil#commandFormatRegex` creates a regex that starts with the `command` argument and lookaheads
+for the elements of `args`. Thus a regex for the input `create front/asd back/dsa` can be created with
+`commandFormatRegex("create", new String[]{"front/", "back/"});`.
+
+`RegexUtil#parseCommandFormat` is an algorithm that parses user input and returns the resulting values
+from the input. Following the previous example, parsing the input will create an arraylist of two arraylists.
+The first arraylist contains one element `"asd"` and the second arraylist contains one element `"dsa"`;
+parallel to the arguments of the input.
 
 
 [[Design-Commons]]
